# epec-country-sector-year

./: README.md  pyproject.toml
data/: epec_country_sector_year.csv  epec_country_sector_year.metadata.json
scripts/: bbc_figures.R  epec_extract.py  make_figures.py
